--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./public/css/styles.css">
+    <title>Page</title>
 </head>
 <body>
-    
+    <h1> Hello Boys, what's going on huh?</h1>
+    <p>
+        damn bruh
+    </p>
 </body>
 </html>
