--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./dist/styles.css">
     <title>Page</title>
 </head>
 <body>
-    <h1> Hello Boys, what's going on huh?</h1>
+    <h1 id="header"> Hello Boys, what's going on huh?</h1>
     <p>
         damn bruh
     </p>
+
+    <script src="./app/js/script.js"></script>
 </body>
 </html>
